--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <h3>Bem Vindo</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ad.</p>
   
 </body>
 </html>
