Finalizando pagina home

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <h3>Bem Vindo</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ad.</p>
+
+  <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, maiores?</h4>
   
 </body>
 </html>
