Finalizado segunda parte home

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <h1>More content</h1>
+
   <h3>Bem Vindo</h3>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, ad.</p>
 
